--- a/ICPoaps/src/ICPoaps_frontend/assets/main.css
+++ b/ICPoaps/src/ICPoaps_frontend/assets/main.css
@@ -1,37 +1,90 @@
+
 body {
-    font-family: sans-serif;
-    font-size: 1.5rem;
+    font-family: 'Poppins', sans-serif;
 }
 
-img {
-    max-width: 50vw;
-    max-height: 25vw;
-    display: block;
-    margin: auto;
+h1 {
+    color: #333;
 }
 
 form {
-    display: flex;
-    justify-content: center;
-    gap: 0.5em;
-    flex-flow: row wrap;
-    max-width: 40vw;
-    margin: auto;
-    align-items: baseline;
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
-button[type="submit"] {
-    padding: 5px 20px;
-    margin: 10px auto;
-    float: right;
+label {
+    display: block;
+    margin-bottom: 5px;
 }
 
-#greeting {
-    margin: 10px auto;
-    padding: 10px 60px;
-    border: 1px solid #222;
+input[type="text"],
+input[type="email"],
+textarea,
+select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
 }
 
-#greeting:empty {
-    display: none;
+input[type="number"],
+input[type="checkbox"] {
+    margin-right: 5px;
+}
+
+input[type="submit"] {
+    background-color: #CF99FF;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: #320744;
+}
+
+.boton-pagina {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #CF99FF;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.boton-pagina:hover {
+    background-color: #320744;
+}
+
+.botones-container {
+    display: flex; /* Utilizar flexbox para el diseño */
+    justify-content: space-between; /* Distribuir los botones a lo largo del contenedor */
+}
+
+.boton-makePoap,
+.boton-mintPoap {
+    flex: 1; /* Hace que los botones ocupen el espacio disponible de manera dinámica */
+    height: 200px;
+    padding: 10px 20px;
+    background-color: #CF99FF;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    display: inline-flex; /* Para que los botones se muestren en línea */
+    justify-content: center; /* Centrar el contenido horizontalmente */
+    align-items: center; /* Centrar el contenido verticalmente */
+    font-size: 5vw; /* Ajustar tamaño del texto en función del ancho del botón */
+    font-weight: bold; /* Hacer el texto en negrita */
+}
+
+.boton-makePoap:hover,
+.boton-mintPoap:hover {
+    background-color: #320744;
 }
