makeNewPoap, mintPoap, findPoapDataById working in frontend

--- a/ICPoaps/src/ICPoaps_frontend/assets/main.css
+++ b/ICPoaps/src/ICPoaps_frontend/assets/main.css
@@ -1,109 +1,107 @@
-
+/* Estilos globales */
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
-}
-
-h1 {
+  }
+  
+  h1 {
     font-size: 2rem;
     margin-bottom: 20px;
-}
-
-h2 {
+  }
+  
+  h2 {
     font-size: 1.5rem;
     margin-bottom: 20px;
     font-weight: 300;
-}
-
-form {
-    max-width: 500px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-label {
-    display: block;
-    margin-bottom: 5px;
-}
-
-nav {
+  }
+  
+  .titleTextCenterContainer {
+    text-align: center;
+    padding: 0%;
+  }
+  
+  /* Estilos para la barra de navegación */
+  nav {
     background: #CF99FF;
     font-size: 1.5rem;
     padding: 5px 20px;
     color: #fff;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     margin: 0;
     box-sizing: border-box;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-.container--twoSideByside {
+  }
+  
+  .logoICPoaps {
+    width: 70px;
+    height: auto;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .textIcpoaps {
+    font-size: 1.8rem;
+    font-weight: 300;
+    margin: 0;
+    padding: 10px;
+  }
+  
+  /* Estilos para el contenedor principal */
+  .clearfix {
+    clear: both;
+  }
+  
+  .container--twoSideByside {
     display: flex;
     justify-content: space-between;
-}
-
-.container--findPoapData,
-.container--formNewPoap,
-.container--formMintPoap {
-    /*display: flex;*/
+  }
+  
+  /* Estilos para el formulario de "Make POAP" */
+  .container--formNewPoap,
+  .container--formMintPoap,
+  .container--findPoapData {
     flex: 1;
-    max-width: auto; /* Puedes ajustar el valor máximo según tus necesidades */
+    max-width: auto;
     margin: 10px;
     padding: 20px;
     border: 1px solid #d9c2db;
     border-radius: 6px;
-}
-
-input[type="text"],
-input[type="email"],
-textarea,
-select {
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  textarea,
+  select,
+  input[type="number"],
+  input[type="url"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
-}
-
-input[type="number"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-}
-
-
-input[type="checkbox"] {
+  }
+  
+  input[type="checkbox"] {
     margin-right: 5px;
-}
-
-input[type="submit"] {
+  }
+  
+  input[type="submit"],
+  .btn--mint,
+  .btn--confrimSend,
+  .btn--findPoapData {
+    display: inline-block;
+    padding: 10px 20px;
     background-color: #CF99FF;
     color: #fff;
-    border: none;
-    padding: 10px 20px;
+    text-decoration: none;
     border-radius: 5px;
     cursor: pointer;
-}
-
-input[type="url"] {
+  }
+  
+  .btn-access-internetId {
     width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-}
-
-.btn--mint,
-.btn--confrimSend {
     display: inline-block;
     padding: 10px 20px;
     background-color: #CF99FF;
@@ -111,24 +109,69 @@ input[type="url"] {
     text-decoration: none;
     border-radius: 5px;
 }
-.btn--mint:hover,
-.btn--confrimSend:hover {
+
+  input[type="submit"]:hover,
+  .btn--mint:hover,
+  .btn--confrimSend:hover,
+  .btn-access-internetId:hover,
+  .btn--findPoapData:hover {
     background-color: #c17bff;
-}
-
-.btn-access-internetId {
-    width: 100%;
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #CF99FF;
+  }
+  
+  /* Estilos para el footer */
+  footer {
+    background: #CF99FF;
+    font-size: 1.5rem;
+    padding: 5px 20px;
     color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
-}
-
-/* Estilos para dispositivos móviles */
-@media (max-width: 768px) {
+    display: flex;
+    align-items: center;
+    margin: 0;
+    box-sizing: border-box;
+    justify-content: space-between;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  }
+   
+  .footer--textCR{
+    font-size: 1.2rem;
+    font-weight: 300;
+    margin: 0;
+    padding: 10px;
+  }
+  .footer--textWLove{
+    font-size: 0.8rem;
+    font-weight: 800;
+    margin: 0;
+    padding: 10px;
+  }
+  
+  .imgContainer {
+    display: flex;
+    align-items: center;
+  }
+  
+  .onChainImg {
+    width: 60px;
+    height: auto;
+    margin: 0;
+    padding: 0px;
+  }
+  
+  .motokoImg {
+    width: 100px;
+    height: auto;
+    margin: 0;
+    padding: 0px;
+  }
+  
+  /* Estilos para dispositivos móviles */
+  @media (max-width: 768px) {
     .container--twoSideByside {
-        display: block;
+      display: block;
     }
-}
+  }
+  
+  .Bigbr {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
